manifests/ingresses/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k3s.asant.me
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
        path: /prometheus
  tls:
  - hosts:
    - k3s.asant.me
